--- a/puzzles/nick/index_n.html
+++ b/puzzles/nick/index_n.html
@@ -33,6 +33,7 @@
   <div class="column" >
     <h5>Programs</h5>
   <p><a href="puzzle.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>  
+  <p><a href="pict/slider.html">Slider</a><br></p>  
   <p><a href="slider_pz1.html">SliderP1</a><br></p>  
   </div>
   <div class="column">
