--- a/puzzles/nick/slider_pz1.html
+++ b/puzzles/nick/slider_pz1.html
@@ -22,7 +22,7 @@
 <script type="text/javascript">
  let nx = 20; let ny = 20;   let colorbgr = 'white'; act=true;
  let w0,h0,w10,h10,Xl,Yt,k;
- let arrimg=['/pict/n10.jpg','/pict/n11.jpg','/pict/n2009.jpg','/pict/n00.jpg','/pict/n000.jpg']; 
+ let arrimg=['pict/n10.jpg','pict/n01.jpg','pict/n2009.jpg','pict/n00.jpg','pict/n000.jpg']; 
  npic=arrimg.length; 
  var canvas = document.getElementById("Mycanvas")
  var ctx = canvas.getContext("2d");  ctx.fillStyle=colorbgr;
