--- a/puzzles/nick/index_n.html
+++ b/puzzles/nick/index_n.html
@@ -35,6 +35,7 @@
   <p><a href="puzzle.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>  
   <p><a href="pict/slider.html">Slider</a><br></p>  
   <p><a href="slider_pz1.html">SliderP1</a><br></p>  
+  <p><a href="slider_var.html">SliderV</a><br></p>  
   </div>
   <div class="column">
     <h5>Pictires</h5>
