--- a/puzzles/galina/pict/slider.html
+++ b/puzzles/galina/pict/slider.html
@@ -1,1 +1,125 @@
+<!DOCTYPE html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>slider_var</title>
+</head>
+<body>
+<style>  
+ body {text-align: center; background-color: #211414; color: rgba(200,200,250,0.9);}
+ #b1{width: 100px; height: 30px; color: white; background-color: rgb(100,0,0); font-weight: bold}
+ #Nr,#Nv{width: 100px; color: rgba(255,0,0,0.9);}
 
+
+</style>
+
+ <canvas id="Mycanvas" width="700" height="700">Обновите браузер</canvas><br> 
+
+ t_var<input id="Nr" type="range" min="5" max="20" value="10" onchange="Snr()"> 
+ <input id="b1" type='button' value='STOP'  onclick="GoCloud()">
+ <input id="Nv" type="range" min="20" max="100" value="50" onchange="Snv()">pause 
+
+<script type="text/javascript">
+ let nx = 20; let ny = 22; act=true;  let colorbgr = '#211414';//'black'; 
+ let w0,h0,w10,h10,Xl,Yt,k;
+ let nr=10;  let nv=40; let n1=nr; let n2=nr+nv; let nsum=n2; 
+ let iz=0;  let ii=0;
+
+ let arrimg=['g00.jpg','g01.jpg','g02.jpg','g03.jpg','g04.jpg','g05.jpg','g06.jpg','g07.jpg','g08.jpg','g09.jpg','g10.jpg','g11.jpg','g12.jpg','g13.jpg','g14.jpg','g15.jpg','g16.jpg','g17.jpg',]; 
+
+ npic=arrimg.length; 
+ var canvas = document.getElementById("Mycanvas")
+ var ctx = canvas.getContext("2d");  ctx.fillStyle=colorbgr;
+ var img0 = new Image();  // Создаём изображение
+ img0.src = arrimg[0];
+ SetImage(); SetData();
+
+ function Snr(){nr=Nr.value; n1=+nr; n2=+n1 + nv; nsum=+n2;}
+ function Snv(){nv=+Nv.value; n2= +n1+nv; nsum=+n2;}
+
+ function GoCloud(){
+ act=!act; if (act) {b1.value='STOP'; b1.style.background='rgb(100,0,0)'} else 
+ {b1.value='PLAY'; b1.style.background='rgb(0,100,0)'}
+ let tim = setInterval(function() {if (!act) {clearInterval(tim)} else { iz++; Cloud();}},100); }
+
+function Cloud1st(){
+for (i = 0; i < nx*ny; i++){
+  j0=Math.floor(i/nx); i0=Math.floor(i%nx); 
+  j1=Math.floor(arr[i]/nx); i1=Math.floor(arr[i]%nx);
+  x0 = i1*w10; y0 = j1*h10; x1 = i0*w10; y1 = j0*h10; 
+  dx = (x1-x0)/nr; dy = (y1-y0)/nr;
+  x = x1 - dx*nSt;  y = y1 - dy*nSt; 
+  ctx.drawImage(img0,x0,y0,w10,h10,Xl+x*k,Yt+y*k,k*w10,k*h10); 
+}}
+    
+function Cloud(){ctx.fillRect(0,0,700,700);  
+for (i = 0; i < 2; i++){
+   if ((iz==0)) {img0.src = arrimg[ii]; SetImage(); SetArr();} 
+   if ((iz>0)&&(iz<=n1)) {nSt=iz; Cloud1st(); canvas.style.opacity=iz/n1}
+   if ((iz>n1) && (iz<=n2)) {nSt=0; ctx.drawImage(img0,0,0,w0,h0,Xl,Yt,k*w0,k*h0);}
+   if (iz>nsum-n1) {canvas.style.opacity=(nsum-iz)/n1}
+   if (iz>=nsum){ctx.drawImage(img0,0,0,w0,h0,Xl,Yt,k*w0,k*h0); iz=0; ii++; if (ii==npic) ii=0;}
+ }}  
+
+function SetData(){SetArr(); ShowPuzzle(); let tim = setInterval(function() {  
+   if (!act) {clearInterval(tim);} else { iz++; Cloud(); }
+},100); 
+}
+
+function SetImage(){
+img0.onload = function() {
+  w0=this.width; h0=this.height; 
+  w10=w0/nx; h10=h0/ny;
+  kw = 690/w0; kh = 690/h0; if (kw<kh) k = kw; else k = kh; 
+  Xl=(700-w0*k)/2; Yt=(700-h0*k)/2; 
+}}
+
+function SetArr() { 
+ let j, i
+ let ntek = nx*ny; arr0 = []; arr = []; arr00 = []; 
+ for (i = 0; i < nx*ny; i++) { arr0[i] = i; arr00[i] = i;  }
+    for (i = 0 ; i < nx*ny ; i++) {
+        j = Math.floor(Math.random() * (ntek))
+        arr[i] = arr0[j];   
+        arr0[j] = arr0[ntek - 1];
+        ntek = ntek - 1;}}
+
+function ShowPuzzle() {  
+  ctx.fillStyle=colorbgr;
+  ctx.fillRect(0,0,700,700);
+  for (i = 0; i < nx*ny; i++){
+  j0=Math.floor(i/nx); i0=Math.floor(i%nx); 
+  j1=Math.floor(arr[i]/nx); i1=Math.floor(arr[i]%nx);
+  ctx.drawImage(img0,i1*w10,j1*h10,w10,h10,Xl+i0*k*w10,Yt+j0*k*h10,k*w10,k*h10);
+ }
+  ShowSetka();}
+
+function ShowSetka() {
+  ctx.lineWidth=1; 
+  ctx.strokeStyle=colorbgr; ctx.beginPath();
+ for (i = 1; i < ny; i++){
+    ctx.moveTo(Xl+0,Yt+i*k*h10);
+    ctx.lineTo(Xl+w0*k,Yt+i*k*h10); }
+ for (i = 1; i < nx; i++){
+    ctx.moveTo(Xl+i*k*w10,Yt+0);
+    ctx.lineTo(Xl+i*k*w10,Yt+k*h0); }
+            ctx.stroke();}
+
+function retrieveImageFromClipboardAsBlob(pasteEvent, callback){
+  if(pasteEvent.clipboardData == false){if(typeof(callback) == "function"){
+            callback(undefined);}};
+    var items = pasteEvent.clipboardData.items;
+    if(items == undefined){if(typeof(callback) == "function"){callback(undefined);}};
+    for (var i = 0; i < items.length; i++) {
+        if (items[i].type.indexOf("image") == -1) continue;
+        var blob = items[i].getAsFile();
+        if(typeof(callback) == "function"){callback(blob);}}}
+window.addEventListener("paste", function(e){
+    retrieveImageFromClipboardAsBlob(e, function(imageBlob){
+        if(imageBlob){var URLObj = window.URL || window.webkitURL;
+        img0.src = URLObj.createObjectURL(imageBlob);
+             SetImage(); SetData();}});}, false);
+
+</script> 
+</body>
+</html>
