--- a/puzzles/galina/pict/index_g.html
+++ b/puzzles/galina/pict/index_g.html
@@ -26,7 +26,7 @@
 <body>
     <h1>Галина Гриценко</h1>
  <!--    <img  src="g01.JPG" id="i0"> -->
-    <img  src="g000.JPG" id="i1">
+    <img  src="g000.jpg" id="i1">
     <!-- <img  src="g02.JPG" id="i2"> -->
 
  <div class="row" style='margin-top: 2%'>
