--- a/billiard/Bill_01.html
+++ b/billiard/Bill_01.html
@@ -198,7 +198,7 @@ label{display: inline-block; width: 120px;
  t4=[80,80,80,80,80,82,82];  t5=[90,90,90,90,90,90,90]; tz=[0,0,0,0,0,0,0];
 
   let kZ=0.0;  kw0=1; kwN=1; let Lx=50; let Ly=50;               flH=0;  
-  imbg.style.width=Lx+'vw'; SetBlr(); 
+  imbg.style.width=Lx+'vw'; //SetBlr(); 
   c1.style.left=Lx+0.5+'vw'; c2.style.left=Lx+11+'vw'; divSave.style.left=Lx+0.5+'vw';
 
 let wris=[];  let xris=[];  let yris=[]; let dg = []; let op=[]; let xv=[];  let yv =[];
