--- a/puzzles/bajan/flag.html
+++ b/puzzles/bajan/flag.html
@@ -31,7 +31,7 @@ body {background-color: rgba(250,250,250,0.5);
 #divinp{ position: fixed; top: 720px;}
 #BG{position: fixed; 
   left: 215px; top: 10px;  height:700px;
-  width:875px; -webkit-filter: blur(5px); opacity: 0.8;  
+  width:875px; -webkit-filter: blur(2px); opacity: 0.8;  
 }
 #btn0 {position: fixed; 
   left: 10px; top: 670px;
@@ -94,49 +94,50 @@ Change fiZ and fiY
  <input type="radio" name="radio" value="5" onclick="varfl=+this.value;SetTrans()">_Y**2 <br>
 <p>Background</p>
 Opct<input type="range" value="0.8" min=0.1 max=1 step=0.05 onchange = 'opc = +this.value; SetOpc()'><br>
-Blur<input type="range" value="4" min=0 max=10 step=1 onchange = 'blr = +this.value;  SetBlr()'><br><br> 
+Blur<input type="range" value=2 min=0 max=10 step=1 onchange = 'blr = +this.value;  SetBlr()'><br><br> 
 <p>Flag</p>
 OpcF<input type="range" value="1" min=0.1 max=1 step=0.05 onchange = 'opf = +this.value;SetTrans()'><br>
 BlFl<input type="range" value="0" min=0 max=10 step=1 onchange = 'blf = +this.value; SetTrans()'><br>
 </div>
 <div id="divinp">
-Nx<input type="range" value="7" min=2 max=30 step=1 onchange = 'nx = +this.value;  SetNxy()'>
-Ny<input type="range" value="7" min=2 max=30 step=1 onchange = 'ny = +this.value;  SetNxy()'>
-Zoom  <input type="range" value="25" min=1 max=50 step=1 onchange = 'kzoom = +this.value/25;  SetTrans()'>
+Nx<input type="range" value="10" min=2 max=30 step=1 onchange = 'nx = +this.value;  SetNxy()'>
+Ny<input type="range" value="8" min=2 max=30 step=1 onchange = 'ny = +this.value;  SetNxy()'>
+Zoom  <input type="range" value="37" min=1 max=50 step=1 onchange = 'kzoom = +this.value/25;  SetTrans()'>
 Ampl  <input type="range" value="25" min=1 max=50 step=1 onchange = 'aflag = +this.value;  SetTrans()'>
 Speed <input type="range" value="25" min=1 max=50 step=1 onchange = 'akf = +this.value/100;'>
 
 <input type="button" id="help" value="HELP" onclick="if (d2.style.height=='350px') d2.style.height='0px'; else d2.style.height='350px' ">
+<input type="checkbox" checked onclick="exp=!exp">expansion<br>
 <p id="sN" style = "margin-left: 10px;"> Nx = </p> 
 </div>
 
  <input type='button' id="btn0" value='PLAY'onclick="act = (!act); Run()">
 
 <script type="text/javascript">
-   let Wb,Hb,bgw;  wp=Mycanvas.width; let act = false; imFlag = true;
-	nx=7; ny=7; let opc=0.8; let opf=1.0; blr = 4; blf = 0; let x0,y0;  kzoom = 1.5; flmouse=false;  flfi=false; let dxf = 5; varfl = 0;  Aks = true;
-	document.getElementById("sN").innerHTML= "Nx = "+nx+" ;  Ny= "+ny;
+   let Wb,Hb,bgw;  wp=Mycanvas.width; let act = false; imFlag = true; let exp=true;
+	nx=10; ny=8; let opc=0.8; let opf=1.0; blr = 2; blf = 0; let x0,y0;  kzoom = 1.5; flmouse=false;  flfi=false; let dxf = 5; varfl = 0;  Aks = true;
+  sN.innerHTML= "Nx = "+nx+" ;  Ny= "+ny;
+
 	var canvas=document.getElementById("Mycanvas");
-    var ctx=canvas.getContext("2d");
- var img2=new Image();  // Создаём изображение
+  var ctx=canvas.getContext("2d");
+  var img2=new Image();  // Создаём изображение
  img2.src = "baj.jpg"; 
 
  var div2 = document.getElementById("d2");
 
 function Run(){
  let tim = setInterval(function() {
-   if (!act) {clearInterval(tim); document.getElementById("btn0").value='PLAY'} else
-   document.getElementById("btn0").value='STOP';
+   if (!act) {clearInterval(tim); btn0.value='PLAY'} else btn0.value='STOP';
    SetTrans()
 },50); }//Run
 
 function SetOpc(){BG.style.opacity = opc; SetTrans()}  
-function SetBlr(){BG.style =' width:'+ wp +'px;'+ '-webkit-filter: blur('+blr+'px);opacity:'+opc+';';SetTrans()} 
+function SetBlr(){BG.style =' width:'+ wp +'px;'+ '-webkit-filter: blur('+blr+'px); opacity:'+opc+';';SetTrans()} 
 
 function SetNxy(){
 w0 = W/(nx-0);  h0 =H/(ny-0); 
   if (W>H) {dx = 250/nx; dy = 250/W*H/ny}  else {dy = 250/ny; dx = 250/H*W/nx;}
-	document.getElementById("sN").innerHTML= "Nx = "+nx+" ;  Ny= "+ny;
+	sN.innerHTML= "Nx = "+nx+" ;  Ny= "+ny;
 SetTrans();	
 }
 
@@ -170,11 +171,17 @@ cosz=Math.cos(fiz); cosy=Math.cos(fiy); sinz=Math.sin(fiz); siny=Math.sin(fiy);
 
 var xs=[]; var ys=[]; var xa=[]; var ya=[]; var zs=[];    
 
- kf=0;
+ kf=0;  let kf1=0;  let kfv=0;  let Nst=200;  n0=0.75*Nst; n1=0.85*Nst; n2=0.9*Nst; let zxy=0;
+ function fz(k){if (k==0){zxy=(kf1<n0) ? 0 : 
+          (kf1<n1) ? (kf1-n0)/(n1-n0) :
+          (kf1<n2) ? 1 : 1-(kf1-n2)/(Nst-n2)} else {
+          zxy=(kf1<n1) ? 0 : 4*(kf1-n1)/(Nst-n1) 
+          }} 
 function SetTrans(){ 
   function clearCanvas() {canvas.height=700;}
-  clearCanvas();
-  Mycanvas.style = '-webkit-filter: blur('+blf+'px); opacity:'+ opf+';'       
+  clearCanvas(); if (exp) {fz(kfv); zx=30*zxy; zy=25*zxy;} else {zx=0; zy=0}
+  Mycanvas.style = '-webkit-filter: blur('+blf+'px); opacity:'+ opf+';' 
+  kf1=kf1+1;  if (kf1==Nst) {kf1=0; kfv=1-kfv} 
  for (i = 0; i < nx+1; i++) {
  	  xs[i] = [];  ys[i] = [];  xa[i] = [];  ya[i] = []; zs[i] = [];
  for (j = 0; j < ny+1; j++) {	  
@@ -192,14 +199,13 @@ switch (varfl) {
   xa[i][j] = xr+xris;  ya[i][j] = yr + yris;
 }}
  for (i = 0; i < nx; i++) {
- for (j = 0; j < ny; j++) {	
-
+ for (j = 0; j < ny; j++) {
    w01 = xa[i+1][j]-xa[i][j];        h01=ya[i][j+1]-ya[i][j];  
    sy = (ya[i+1][j]-ya[i][j])/w01;  sx = (xa[i][j+1]-xa[i][j])/h01; 
    if (w01>0) {skx =1; } else {skx =-1; };
    if (h01>0) {sky =1; } else {sky =-1; };
 ctx.setTransform(skx,skx*sy,sky*sx,sky,-ya[i][j]*sx,-xa[i][j]*sy);  //матрица поворота и др.
-ctx.drawImage(img2,w0*i,h0*j,w0,h0,skx*xa[i][j],sky*ya[i][j],skx*1.05*w01,sky*1.05*h01); 
+ctx.drawImage(img2,w0*i,h0*j,w0,h0,skx*xa[i][j]+zx*i,sky*ya[i][j]+zy*j,skx*1.05*w01,sky*1.05*h01); 
  
 }}  if ((act)&&(!flmouse)&&(!flfi))  kf=kf+1;
 } 
@@ -208,7 +214,7 @@ function aksxy(x,y,z){xt = (x*cosz-y*sinz)*cosy+z*siny; yt = x*sinz+y*cosz;  zt=
   if (Aks) {xr=(xt-yt)*0.82;  yr = (yt+xt)*0.82-zt;} else
            {xr=xt-zt*0.7;  yr = yt+zt*0.7;}
 }
-var divfi=document.getElementById("divfi");
+//var divfi=document.getElementById("divfi");
 divfi.onmousedown= function(obj_event) { 
   flfi = true; x0fi = window.event.offsetX; y0fi = window.event.offsetY; }
 divfi.onmousemove= function(obj_event) { 
