--- a/puzzles/ana/index_a.html
+++ b/puzzles/ana/index_a.html
@@ -33,6 +33,7 @@
   <div class="column" >
     <h5>Programs</h5>
     <p><a href="puzzlet.html">PUZZLE</a><br>Можно ctr+V вставить другую картинку</p>
+    <p><a href="../bajan/flag1.html">FLAG</a><br></p>
   </div>
   <div class="column">
     <h5>Pictires</h5>
