--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   <div class="column" >
     <h5>Programs</h5>
     <p><a href="./puzzles/flag/_Flag.html">flag</a> </p>
-    <p><a href="./puzzles/torus.html">Torus</a> </p>
+    <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="./billiard/Bill_01.html">Биллиард</a> </p>
     <p><a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
     <p><a href="./puzzles/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
