--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <p><a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
     <p><a href="./puzzles/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
     <p><a href="./puzzles/Puzzle_00.html">Puzzle_00</a></p>
-    <p><a href="./puzzles/line_r.html">Line_R</a></p>
+    <p><a href="_p/line_r.html">Line_R</a></p>
   </div>
   <div class="column">
     <h5>Pictires</h5>
