--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
     <p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
     <p><a href="./puzzles/Puzzle_00.html">Puzzle_00</a></p>
     <p><a href="_p/line_r.html">Line_R</a></p>
+    <p><a href="./puzzles/js-gausst/tableGauss.html">mi-rotate</a></p>  
   </div>
   <div class="column">
     <h5>Pictires</h5>
