--- a/puzzles/mi-rotate/Rotate v.01.html
+++ b/puzzles/mi-rotate/Rotate v.01.html
@@ -20,7 +20,7 @@
  
   <body>
 <p> hover Image:=> <br>rotate(1turn); </p>
-   <p> <img src="https://images.travexpress.net/news/013594.jpg"><img src="https://lh3.googleusercontent.com/proxy/v4dPBOEdowY5KV_PxvJd7IUIPOHFRdftx5KVm-cYORcWlgJaqHnZw1y8Ugpd_uTw_FGYSxD7O1Hz48GC_iibKuba9C8tQSd6CtN75snyzhxgrf9Jl3Y-zkURjXdcZicqsySNL61RGvbW"></p>
+   <p> <img src="https://images.travexpress.net/news/013594.jpg"><img src="../Valdek.jpg"></p>
 <form>
 <fieldset> 
 <legend>Berloga #51</legend>
