--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
  <div class="row" style='margin-top: 2%'>
   <div class="column" >
     <h5>Programs</h5>
-    <p><a href="./puzzles/flag/_Flag.html">flag</a> </p>
+    <p><a href="./puzzles/flag/flag1.html">flag</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
     <p><a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
