--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
   </div>
   <div class="column">
     <h5>Pictires</h5>
+    <p><a href="./_p/berloga51.html">BERLOGA 51</a></p>
     <p><a href="./images/mila-puzzle.jpg">mila puzzle</a></p>
     <p><a href="./images/2020_epidemic.jpg">2020_epidemic</a></p>
     <p><a href="./images/80Ded.gif">ded_80</a></p>
