--- a/index.html
+++ b/index.html
@@ -49,10 +49,11 @@
   </div>
   <div class="column">
     <h5>Pictires</h5>
-    <p><a href="..//_p/berloga51.html">BERLOGA 51</a></p>
+    <p><a href="./_p/berloga51.html">BERLOGA 51</a></p>
     <p><a href="./images/mila-puzzle.jpg">mila puzzle</a></p>
     <p><a href="./images/2020_epidemic.jpg">2020_epidemic</a></p>
     <p><a href="./images/80Ded.gif">ded_80</a></p>
+    <p><a href="./_p/bears&b51.html">Bears and Berloga 51</a></p>
     <p><a href="./images/mila-tiger.jpg">mila tiger</a></p>
     <p><a href="./images/FromRussiaWithLove.jpg">From Russia with Love</a></p>
     <p><a href="./images/mogychi-lap.jpg">Mogychi Lap</a></p>
