--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
     <p><a href="./puzzles/flag/flag1.html">flag</a> </p>
     <p><a href="_p/torus.html">Torus</a> </p>
     <p><a href="_p/_bt/Bill_01.html">Биллиард</a> </p>
+    <p><a href="./puzzles/spiralSquare.html">Spiral Square</a> </p>
     <p><a href="./puzzles/mi-rotate/Rotate%20v.01.html">mi-rotate</a></p>
     <p><a href="_p/Ball%20without%20Barboss.html">Ball without Barboss</a></p>
     <p><a href="./puzzles/Puzzle_00.html">Puzzle_00</a></p>
